<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_find">Find</string>
    <string name="action_vod">VOD</string>
    <string name="action_live_tv">LIVE CHANNEL</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">View2</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_grid_view">Wawoo</string>
    <string name="title_activity_volley">VolleyActivity</string>
    <string name="title_activity_signin">SigninActivity</string>

    <string name="hello">Hello World, Set_Text_TitleBar!</string>
    <color name="titlebackgroundcolor">#3232CD</color>
    <color name="titletextcolor">#FFFF00</color>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <!-- azola -->
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_plan">PlanActivity</string>

    <string name="title_activity_login">Sign in</string>
    <string name="app_name">WOWOO</string>
    <string name="facebook_app_id">1109195535761016</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email ID</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_new_register">New User? Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_already_user">Already User? Login</string>
    <string name="action_login">LOGIN</string>
    <string name="title_choose_plan">Choose A Plan</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot\nPassword?</string>
    <string name="action_forgot_password_long">FORGOT PASSWORD</string>
    <string name="action_send">SEND EMAIL</string>
    <string name="action_next">NEXT</string>
    <string name="action_or">OR</string>
    <string name="action_login_facebook">Login With Facebook</string>

    <string name="error_invalid_person">This person name is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
