<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/orange_dark"
    tools:context="com.example.pc.myapplication.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="@color/text_white"
            android:padding="@dimen/activity_padding">

            <TextView  android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="30sp"
                android:text="@string/action_register" android:maxLines="1"
                android:gravity="center" android:textStyle="bold"
                android:textColor="@color/orange_dark"
                android:singleLine="true" android:layout_marginBottom="8dp"
                android:background="#07000000"/>

            <EditText android:id="@+id/prompt_name" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLines="1" android:singleLine="true" />

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/action_sign_up"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:layout_marginBottom="8dp"/>

            <LinearLayout android:id="@+id/buttong_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:background="@color/orange_dark">
                <Button android:id="@+id/action_sign_up" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:text="@string/action_sign_up"
                    android:textStyle="bold" android:background="@color/orange_dark"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/register_field" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:background="@color/orange_dark">

        <Button android:id="@+id/action_already_user" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_already_user"
            android:textStyle="bold" android:background="@color/orange_dark"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView  android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="30sp"
            android:text="@string/action_or" android:maxLines="1"
            android:gravity="center"    android:background="@color/orange_dark"
            android:singleLine="true" android:layout_gravity="center_vertical"
            android:layout_weight="1" android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <Button android:id="@+id/action_login_facebook" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_login_facebook"
            android:textStyle="bold" android:background="@color/blue_dark"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>

