<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/orange_dark"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.pc.myapplication.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="@color/text_white"
            android:padding="@dimen/activity_padding">

            <TextView  android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="30sp"
                android:text="@string/action_login" android:maxLines="1"
                android:gravity="center" android:textStyle="bold"
                android:singleLine="true"  android:layout_marginBottom="8dp"
                android:background="#07000000" android:textColor="@color/orange_dark"/>

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/action_sign_in_short"
                android:imeActionLabel="@string/action_sign_in_short" android:layout_marginBottom="8dp"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <LinearLayout android:id="@+id/buttong_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:background="@color/text_white">

                <Button android:id="@+id/action_forgot_password" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:text="@string/action_forgot_password" android:layout_marginRight="4dp"
                    android:textStyle="bold" android:background="@color/orange_dark"
                    android:layout_weight="1"/>

                <Button android:id="@+id/action_sign_in_short" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:text="@string/action_sign_in_short"
                    android:background="@color/orange_dark"
                    android:textStyle="bold"  android:layout_marginLeft="4dp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/register_field" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:background="@color/orange_dark">

        <Button android:id="@+id/action_register" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_new_register"
            android:textStyle="bold" android:background="@color/orange_dark"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView  android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="30sp"
            android:text="@string/action_or" android:maxLines="1"
            android:gravity="center"    android:background="@color/orange_dark"
            android:singleLine="true"
            android:textStyle="bold"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</LinearLayout>

