<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_large"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@android:color/holo_orange_dark"
    tools:context="com.example.pc.myapplication.ForgotPasswordActivity">


    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"  >

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:background="@android:color/holo_red_light"
            android:padding="@dimen/activity_padding">

            <TextView  android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textSize="20sp"
                android:text="@string/action_forgot_password_long" android:maxLines="1"
                android:gravity="center" android:textStyle="bold"

                android:background="#07000000"/>

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:imeActionId="@+id/action_send"
                android:imeActionLabel="@string/action_send"
                android:imeOptions="actionUnspecified"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:singleLine="true" />

            <LinearLayout android:id="@+id/buttong_field" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:textSize="25sp"
                android:background="@android:color/holo_red_light">

                <Button android:id="@+id/action_send" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="match_parent"
                    android:text="@string/action_send"
                    android:textStyle="bold" android:background="@android:color/holo_orange_dark"
                    android:layout_weight="1" android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/register_field" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:background="@android:color/holo_orange_dark">

        <Button android:id="@+id/action_register" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textStyle="bold" android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView  android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textSize="30sp"
            android:text="@string/action_or" android:maxLines="1"
            android:gravity="center"    android:background="@android:color/holo_orange_dark"
            android:singleLine="true"
            android:textStyle="bold"/>

        <Button android:id="@+id/action_login_facebook" style="?android:textAppearanceSmall"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/action_login_facebook"
            android:textStyle="bold" android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>

